--- a/Prevention.html
+++ b/Prevention.html
@@ -13,13 +13,13 @@
 <header>
     <nav>
         <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="FAQs.html">FAQs</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li><a href="About.html">About</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Prevention.html" class="active">Prevention</a></li>
+            <li><a href="Prevention.html" >Prevention</a></li>
             <li><a href="Symptoms.html">Symptoms</a></li>
             <li><a href="Testing.html">Testing</a></li>
+             <li><a href="FAQs.html">FAQs</a></li>
+              <li><a href="Contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -122,9 +122,9 @@
         
         <section class="section">
             <h2>3. Awareness & Action</h2>
-            <p>Visual reminders and key takeaways to promote prevention awareness using the trusted colors of red and dark blue.</p>
+            <p>Visual reminders and key takeaways to promote prevention awareness .</p>
             
-            <h3>Awareness Icons</h3>
+            <h3>Awareness prevention methods</h3>
             <div class="awareness-icons">
                 <div class="icon-item" onclick="showIconInfo('PrEP provides daily protection for HIV-negative individuals at risk.')">
                     <div class="icon-circle">🛡️</div>
@@ -182,5 +182,7 @@
             </div>
         </section>
 </main>
+<script src="script.js"></script>
+
 </body>
 </html>
