--- a/FAQs.html
+++ b/FAQs.html
@@ -13,13 +13,13 @@
 <header>
     <nav>
         <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="FAQs.html">FAQs</a></li>
+           <li><a href="Index.html">Home</a></li>
             <li><a href="About.html">About</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Prevention.html">Prevention</a></li>
+            <li><a href="Prevention.html" class="active">Prevention</a></li>
             <li><a href="Symptoms.html">Symptoms</a></li>
             <li><a href="Testing.html">Testing</a></li>
+            <li><a href="FAQs.html">FAQs</a></li>
+             <li><a href="Contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
