--- a/Contact.html
+++ b/Contact.html
@@ -451,24 +451,18 @@
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <header>
-        <div class="container">
-            <div class="header-content">
-                <div class="logo">
-                    <i class="fas fa-hand-holding-heart"></i>
-                    <h1>HopeConnect</h1>
-                </div>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="resources.html">Resources</a></li>
-                        <li><a href="get-involved.html">Get Involved</a></li>
-                        <li><a href="contact.html" aria-current="page">Get Help</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
+    <nav>
+        <ul>
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Prevention.html" >Prevention</a></li>
+            <li><a href="Symptoms.html">Symptoms</a></li>
+            <li><a href="Testing.html">Testing</a></li>
+             <li><a href="FAQs.html">FAQs</a></li>
+              <li><a href="Contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
     <main id="main-content">
         <div class="container">
