--- a/Testing.html
+++ b/Testing.html
@@ -4,124 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Testing & Treatment | HIV Awareness</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to bottom right, #fce4ec, #e3f2fd);
-      padding: 40px 20px;
-      color: #333;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      background-color: #fff;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      padding: 40px;
-    }
-
-    .icon {
-      width: 60px;
-      height: 60px;
-      background: linear-gradient(to bottom right, #cc0033, #ff4d6d);
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0 auto 20px;
-    }
-
-    .icon svg {
-      width: 30px;
-      height: 30px;
-      fill: white;
-    }
-
-    h1 {
-      font-size: 36px;
-      text-align: center;
-      color: #cc0033;
-      margin-bottom: 10px;
-    }
-
-    p.description {
-      text-align: center;
-      font-size: 18px;
-      color: #555;
-      margin-bottom: 40px;
-    }
-
-    .accordion-section {
-      border: 1px solid #ddd;
-      border-radius: 12px;
-      margin-bottom: 20px;
-      overflow: hidden;
-    }
-
-    .accordion-header {
-      background-color: #f9f9f9;
-      cursor: pointer;
-      padding: 16px 20px;
-      font-weight: 600;
-      font-size: 20px;
-      color: #0077cc;
-      transition: background-color 0.3s;
-    }
-
-    .accordion-header:hover {
-      background-color: #f0f0f0;
-    }
-
-    .accordion-content {
-      display: none;
-      padding: 20px;
-      border-top: 1px solid #ddd;
-      animation: fadeIn 0.3s ease-in-out;
-    }
-
-    .accordion-content ul {
-      padding-left: 20px;
-      margin-top: 10px;
-    }
-
-    .accordion-content ul li {
-      margin-bottom: 8px;
-    }
-
-    .highlight-box {
-      background-color: #fce4ec;
-      border-left: 4px solid #cc0033;
-      padding: 15px;
-      border-radius: 8px;
-      margin-bottom: 15px;
-    }
-
-    .footer-message {
-      text-align: center;
-      padding-top: 20px;
-      font-size: 14px;
-      color: #888;
-      border-top: 1px solid #eee;
-      margin-top: 40px;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(-5px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-  </style>
+ <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome for icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
-<body>
-
+<body class="testing-page">
+<header>
+    <nav>
+        <ul>
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Prevention.html" >Prevention</a></li>
+            <li><a href="Symptoms.html">Symptoms</a></li>
+            <li><a href="Testing.html">Testing</a></li>
+             <li><a href="FAQs.html">FAQs</a></li>
+              <li><a href="Contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
   <div class="container">
     <!-- Hero Section -->
     <div class="icon">
