--- a/Contact.html
+++ b/Contact.html
@@ -15,16 +15,16 @@
         }
 
         :root {
-            --primary: #cf3d38;
-            --primary-dark: #ec2c13;
-            --secondary: #ff7e5f;
+            --primary: #bd9bc7;
+            --primary-dark: #bd9bc7;
+            --secondary: #bd9bc7;
             --light: #f8f9fa;
             --dark: #343a40;
             --gray: #6c757d;
             --success: #28a745;
-            --warning: #1b96dd;
-            --danger: #dc3545;
-            --confidential: #e83e8c;
+            --warning: #bd9bc7;
+            --danger: #bd9bc7;
+            --confidential: #bd9bc7;
         }
 
         body {
@@ -42,7 +42,8 @@
 
         /* Header Styles */
         header {
-            background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+            background:linear-gradient(90deg, rgba(197,142,164,0.95), rgba(168,111,132,0.95));
+ 
             color: white;
             padding: 1rem 0;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -450,7 +451,7 @@
     <!-- Skip to main content link for keyboard users -->
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
-    <header>
+ <header>
     <nav>
         <ul>
             <li><a href="Index.html">Home</a></li>
@@ -463,6 +464,7 @@
         </ul>
     </nav>
 </header>
+   
 
     <main id="main-content">
         <div class="container">
