--- a/Contact.html
+++ b/Contact.html
@@ -605,7 +605,8 @@
                         </div>
                         <h3>Educational Materials</h3>
                         <p>Download brochures, factsheets and prevention information</p>
-                        <a href="resources.html" class="resource-link">
+                        <a href="https://www.education.gov.za/Programmes/CareandSupport/HealthPromotion/HIVandAIDSLifeSkillsEducationProgramme.aspx" class="resource-link">
+                            View Resources <i class="fas fa-arrow-right"></i>" class="resource-link">
                             View Resources <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -615,7 +616,7 @@
                         </div>
                         <h3>Support Groups</h3>
                         <p>Connect with others in your community for mutual support</p>
-                        <a href="get-involved.html" class="resource-link">
+                        <a href="https://www.nacosa.org.z" class="resource-link">
                             Find Groups <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -645,14 +646,7 @@
                         <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About Us</a>
-                    <a href="resources.html">Resources</a>
-                    <a href="get-involved.html">Get Involved</a>
-                    <a href="contact.html">Get Help</a>
-                </div>
+               
                 <div class="footer-section">
                     <h3>Emergency Contacts</h3>
                     <p><i class="fas fa-phone"></i> SANAC: 0800 012 322</p>
@@ -710,3 +704,4 @@
     </script>
 </body>
 </html>
+
