--- a/Contact.html
+++ b/Contact.html
@@ -199,10 +199,10 @@
                     <h3>HopeConnect</h3>
                     <p>Dedicated to HIV/AIDS awareness, prevention, support, and ending stigma in our communities.</p>
                     <div class="social-links">
-                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/loveLifeNGO/info/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/loveLifeNGO" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/lovelifengo/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/channel/UC6cEcSoowTiENJcmBQ6XUGg/posts" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                
@@ -222,4 +222,5 @@
     <script src="Script.js"></script>
 </body>
 </html>
+
 
