--- a/Contact.html
+++ b/Contact.html
@@ -189,6 +189,33 @@
                     <p>All helplines listed provide confidential services. You don't need to give your name, and your call cannot be traced. These organizations are committed to protecting your privacy and providing non-judgmental support.</p>
                 </div>
             </div>
+
+            <!-- Contact Form Section -->
+<div class="contact-form-section">
+    <h2 style="text-align:center; color: var(--primary-dark); margin-bottom: 1rem;">
+        Send Us a Message
+    </h2>
+    <form class="contact-form" action="https://formspree.io/f/xqadneze" method="POST" autocomplete="off">
+        <div class="form-group">
+            <label for="name"><i class="fas fa-user"></i> Your Name</label>
+            <input type="text" id="name" name="name" required placeholder="Enter your name">
+        </div>
+        <div class="form-group">
+            <input type="email" id="email" name="email" required placeholder="Enter your email">            <label for="email"><i class="fas fa-envelope"></i> Your Email</label>
+
+        </div>
+        <div class="form-group">
+            <label for="message"><i class="fas fa-comment-dots"></i> Message</label>
+            <textarea id="message" name="message" rows="5" required placeholder="Type your message here"></textarea>
+        </div>
+        <button type="submit" class="btn btn-info" style="width:100%; margin-top:1rem;">
+            <i class="fas fa-paper-plane"></i> Send Message
+        </button>
+    </form>
+    <p style="text-align:center; font-size:0.95rem; margin-top:0.5rem; color:var(--primary-dark);">
+        We respect your privacy. Your information will be kept confidential.
+    </p>
+</div>
         </div>
     </main>
 
