Refactor code structure for improved readability and maintainability

--- a/Home.html
+++ b/Home.html
@@ -199,7 +199,7 @@
             justify-content: center;
             color: var(--muted);
             font-size: 18px;
-            background: linear-gradient(180deg, rgba(197,142,164,0.06), rgba(255,255,255,0.02)), url('https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');
+            background: linear-gradient(180deg, rgba(197,142,164,0.06), rgba(255,255,255,0.02)), url('assets/hiv-awareness.jpg');
             background-size: cover;
             background-position: center;
             box-shadow: 0 10px 30px rgba(41,34,37,0.04);
@@ -391,11 +391,13 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#about">About HIV</a></li>
-                        <li><a href="#symptoms">Symptoms</a></li>
-                        <li><a href="#prevention">Prevention</a></li>
-                        <li><a href="#testing">Testing</a></li>
-                        <li><a href="#facts">Key Facts</a></li>
+                         <li><a href="Index.html">Home</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Prevention.html" >Prevention</a></li>
+            <li><a href="Symptoms.html">Symptoms</a></li>
+            <li><a href="Testing.html">Testing</a></li>
+             <li><a href="FAQs.html">FAQs</a></li>
+              <li><a href="Contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -460,4 +462,43 @@
     </section>
 
 </body>
-</html>
+</html><section class="hero">
+    <div class="hero-text">
+      <h2>Together We Rise</h2>
+      <p>Empowering communities. Reducing stigma. Building hope for a brighter, healthier future.</p>
+    </div>
+  </section>
+
+  <section class="mission">
+    <h2>Our Mission</h2>
+    <p>We are dedicated to raising awareness about HIV and AIDS through education, compassion, and community support. Our mission is to empower individuals with the knowledge and confidence to take control of their health and eliminate stigma.</p>
+  </section>
+
+  <section class="vision">
+    <h2>Our Vision</h2>
+    <p>We envision a world where no one feels alone or judged because of their HIV status. A world where compassion, inclusion, and awareness replace fear and misinformation.</p>
+  </section>
+
+  <section class="impact">
+    <h2>Real Stories, Real Change</h2>
+    <div class="impact-cards">
+      <div class="card">
+        <img src="https://cdn.pixabay.com/photo/2016/11/29/04/17/african-1868296_1280.jpg" alt="Community support">
+        <p>“Through this organization, I found strength, understanding, and a community that cares.” — *Noluthando*</p>
+      </div>
+      <div class="card">
+        <img src="https://cdn.pixabay.com/photo/2016/03/27/07/08/hands-1281953_1280.jpg" alt="Teamwork">
+        <p>“The workshops helped me learn, heal, and educate others. Awareness truly saves lives.” — *Thabo*</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="cta">
+    <h2>Join the Movement</h2>
+    <p>Be part of the change. Volunteer, donate, or share your story to help raise awareness and end stigma.</p>
+    <a href="contact.html" class="btn">Get Involved</a>
+  </section>
+
+  <footer>
+    <p>© 2025 Together We Rise | All Rights Reserved</p>
+  </footer>
