--- a/Prevention.html
+++ b/Prevention.html
@@ -9,20 +9,27 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
 <header>
-    <nav>
-        <ul>
-            <li><a href="Index.html">Home</a></li>
+        <div class="container">
+            <div class="header-content">
+                <div class="logo">
+                    <span class="logo-icon"><i class="fas fa-ribbon"></i></span>
+                    HIV Awareness
+                </div>
+                <nav>
+                    <ul>
+                         <li><a href="Index.html">Home</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="Prevention.html" >Prevention</a></li>
             <li><a href="Symptoms.html">Symptoms</a></li>
             <li><a href="Testing.html">Testing</a></li>
              <li><a href="FAQs.html">FAQs</a></li>
               <li><a href="Contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
 <main>
     <header>
