--- a/Symptoms.html
+++ b/Symptoms.html
@@ -14,6 +14,31 @@
             --dusty-pink-dark: #a86f84;
             --card-bg: #ffffff;
         }
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            width: 30px;
+            height: 21px;
+            justify-content: space-between;
+        }
+        .hamburger span {
+            display: block;
+            height: 3px;
+            width: 100%;
+            background-color: white;
+            border-radius: 3px;
+            transition: all 0.3s ease;
+        }
+        .hamburger.active span:nth-child(1) {
+            transform: translateY(9px) rotate(45deg);
+        }
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
+        }
+        .hamburger.active span:nth-child(3) {
+            transform: translateY(-9px) rotate(-45deg);
+        }
 
         * {
             margin: 0;
@@ -66,18 +91,51 @@
             gap: 28px;
         }
 
-        .symptom-card {
-            background-color: var(--card-bg);
-            border-radius: 12px;
-            padding: 26px 28px;
-            box-shadow: 0 10px 30px rgba(41,34,37,0.04);
-            transition: transform 0.28s cubic-bezier(.2,.9,.3,1);
-            border-top: 4px solid var(--dusty-pink);
-        }
+   .symptom-card {
+  background-color: var(--card-bg);
+  border-radius: 12px;
+  padding: 26px 28px;
+  box-shadow: 0 10px 30px rgba(41,34,37,0.04);
+  transition: transform 0.28s cubic-bezier(.2,.9,.3,1);
+  border-top: 4px solid var(--dusty-pink);
+}
 
-        .symptom-card:hover {
-            transform: translateY(-10px);
-        }
+/* Responsive for small screens */
+@media (max-width: 768px) {
+  .hamburger {
+    display: flex !important;
+    z-index: 101;
+  }
+  nav ul {
+    position: fixed;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(90deg, rgba(197,142,164,0.98), rgba(168,111,132,0.98));
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: all 0.3s ease;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+    z-index: 99;
+  }
+  nav ul.active {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  nav ul li {
+    margin: 10px 0;
+    width: 100%;
+    text-align: center;
+  }
+  nav ul li a {
+    display: block;
+    padding: 12px 0;
+    font-size: 18px;
+  }
+}
 
         .symptom-card h3 {
             color: var(--text);
@@ -147,6 +205,10 @@
             .section-title h2 {
                 font-size: 28px;
             }
+            .hamburger {
+                display: flex !important;
+                z-index: 101;
+            }
         }/* Header Styles */
         header {
             background: linear-gradient(90deg, rgba(197,142,164,0.95), rgba(168,111,132,0.95));
@@ -161,8 +223,17 @@
         
         .header-content {
             display: flex;
-            justify-content: space-between;
             align-items: center;
+            position: relative;
+        }
+        .logo {
+            margin-right: auto;
+        }
+        .hamburger {
+            position: absolute;
+            top: 0;
+            right: 0;
+            margin: 18px 20px 0 0;
         }
         
         .logo {
@@ -203,7 +274,83 @@
         }
     </style>
 </head>
-<body>
+    <!-- Scroll to Top Button -->
+    <button id="scrollTopBtn" aria-label="Back to top">
+        <span class="arrow-icon"><i class="fas fa-arrow-up"></i></span>
+    </button>
+
+    <style>
+        #scrollTopBtn {
+            position: fixed;
+            bottom: 32px;
+            right: 32px;
+            width: 48px;
+            height: 48px;
+            border: none;
+            border-radius: 50%;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.12);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            z-index: 9999;
+            transition: background 0.3s, color 0.3s;
+        }
+        #scrollTopBtn.pink {
+            background: var(--dusty-pink);
+            color: #fff;
+        }
+        #scrollTopBtn.white {
+            background: #fff;
+            color: var(--dusty-pink);
+            border: 2px solid var(--dusty-pink);
+        }
+        #scrollTopBtn .arrow-icon {
+            font-size: 1.6rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
+    <script>
+        // Show/hide and style scroll-to-top button
+        const scrollTopBtn = document.getElementById('scrollTopBtn');
+        function updateScrollBtn() {
+            if (window.scrollY > 200) {
+                scrollTopBtn.style.display = 'flex';
+                // Detect background color
+                let pinkSections = document.querySelectorAll('header, .facts, footer');
+                let btnRect = scrollTopBtn.getBoundingClientRect();
+                let isOnPink = false;
+                pinkSections.forEach(section => {
+                    let rect = section.getBoundingClientRect();
+                    if (
+                        btnRect.bottom > rect.top &&
+                        btnRect.top < rect.bottom &&
+                        btnRect.right > rect.left &&
+                        btnRect.left < rect.right
+                    ) {
+                        isOnPink = true;
+                    }
+                });
+                if (isOnPink) {
+                    scrollTopBtn.classList.remove('pink');
+                    scrollTopBtn.classList.add('white');
+                } else {
+                    scrollTopBtn.classList.remove('white');
+                    scrollTopBtn.classList.add('pink');
+                }
+            } else {
+                scrollTopBtn.style.display = 'none';
+            }
+        }
+        window.addEventListener('scroll', updateScrollBtn);
+        window.addEventListener('resize', updateScrollBtn);
+        scrollTopBtn.addEventListener('click', () => {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        });
+    </script>
+
     <header>
         <div class="container">
             <div class="header-content">
@@ -211,19 +358,39 @@
                     <span class="logo-icon"><i class="fas fa-ribbon"></i></span>
                     HIV Awareness
                 </div>
+                <div class="hamburger" id="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <nav>
-                    <ul>
-                         <li><a href="Index.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Prevention.html" >Prevention</a></li>
-            <li><a href="Symptoms.html">Symptoms</a></li>
-            <li><a href="Testing.html">Testing</a></li>
-             <li><a href="FAQs.html">FAQs</a></li>
-              <li><a href="Contact.html">Contact</a></li>
+                    <ul id="nav-menu">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="prevention.html">Prevention</a></li>
+                        <li><a href="symptoms.html" class="active">Symptoms</a></li>
+                        <li><a href="testing.html">Testing</a></li>
+                        <li><a href="faqs.html">FAQs</a></li>
+                        <li><a href="contact.html#contact-form">Contact</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
+    </header>
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const navMenu = document.getElementById('nav-menu');
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navMenu.classList.toggle('active');
+        });
+        document.querySelectorAll('#nav-menu a').forEach(link => {
+            link.addEventListener('click', () => {
+                hamburger.classList.remove('active');
+                navMenu.classList.remove('active');
+            });
+        });
+    </script>
     </header>
 
     <div class="container">
