--- a/Index.html
+++ b/Index.html
@@ -603,6 +603,13 @@
                 navMenu.classList.remove('active');
             }
         });
+        
+        // Redirect to next page when user scrolls to bottom
+        window.addEventListener('scroll', function() {
+            if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
+                window.location.href = 'About.html'; // Change to your next page
+            }
+        });
     </script>
 </body>
 </html>
