--- a/Testing.html
+++ b/Testing.html
@@ -606,6 +606,13 @@
         }
       });
     });
+    
+    // Redirect to next page when user scrolls to bottom
+    window.addEventListener('scroll', function() {
+        if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
+            window.location.href = 'faqs.html'; // Change to your next page
+        }
+    });
   </script>
 </body>
 </html>
