--- a/Contact.html
+++ b/Contact.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <style>
+            html {
+                scroll-behavior: smooth;
+            }
+        </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Help & Support - HIV Awareness</title>
@@ -729,7 +734,7 @@
     </style>
     <script>
         // Show/hide and style scroll-to-top button
-        const scrollTopBtn = document.getElementById('scrollTopBtn');
+    // ...existing code...
         function updateScrollBtn() {
             if (window.scrollY > 200) {
                 scrollTopBtn.style.display = 'flex';
@@ -1044,5 +1049,43 @@ document.querySelector('.contact-form').addEventListener('submit', function(e) {
             });
         });
     </script>
+    <script>
+  let scrollTimeout;
+  const delay = 50; // 0.5 seconds
+  const pageOrder = [
+    'Index.html',
+    'about.html',
+    'prevention.html',
+    'symptoms.html',
+    'testing.html',
+    'faqs.html',
+    'contact.html'
+     // replace with your 8th page filename
+  ];
+  
+  const currentPage = window.location.pathname.split('/').pop();
+
+  window.addEventListener('scroll', () => {
+    clearTimeout(scrollTimeout);
+    scrollTimeout = setTimeout(() => {
+      // Scroll to next page
+      if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight - 10) {
+        const nextIndex = pageOrder.indexOf(currentPage) + 1;
+        if (nextIndex < pageOrder.length) {
+          window.location.href = pageOrder[nextIndex];
+        }
+      }
+
+      // Scroll to previous page
+      if (window.scrollY <= 10) {
+        const prevIndex = pageOrder.indexOf(currentPage) - 1;
+        if (prevIndex >= 0) {
+          window.location.href = pageOrder[prevIndex];
+        }
+      }
+    }, delay);
+  });
+</script>
+
 </body>
 </html>
