--- a/Testing.html
+++ b/Testing.html
@@ -1,6 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
+    <button id="scrollTopBtn" aria-label="Back to top">
+      <span class="arrow-icon"><i class="fas fa-arrow-up"></i></span>
+    </button>
+    <style>
+      #scrollTopBtn {
+        position: fixed;
+        bottom: 32px;
+        right: 32px;
+        width: 48px;
+        height: 48px;
+        border: none;
+        border-radius: 50%;
+        box-shadow: 0 4px 16px rgba(0,0,0,0.12);
+        display: none;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        z-index: 9999;
+        transition: background 0.3s, color 0.3s;
+      }
+      #scrollTopBtn.pink {
+        background: var(--dusty-pink);
+        color: #fff;
+      }
+      #scrollTopBtn.white {
+        background: #fff;
+        color: var(--dusty-pink);
+        border: 2px solid var(--dusty-pink);
+      }
+      #scrollTopBtn .arrow-icon {
+        font-size: 1.6rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
+    <script>
+      // Show/hide and style scroll-to-top button
+  let scrollTopBtn = document.getElementById('scrollTopBtn');
+      function updateScrollBtn() {
+        if (window.scrollY > 200) {
+          scrollTopBtn.style.display = 'flex';
+          let pinkSections = document.querySelectorAll('header, .facts, footer');
+          let btnRect = scrollTopBtn.getBoundingClientRect();
+          let isOnPink = false;
+          pinkSections.forEach(section => {
+            let rect = section.getBoundingClientRect();
+            if (
+              btnRect.bottom > rect.top &&
+              btnRect.top < rect.bottom &&
+              btnRect.right > rect.left &&
+              btnRect.left < rect.right
+            ) {
+              isOnPink = true;
+            }
+          });
+          if (isOnPink) {
+            scrollTopBtn.classList.remove('pink');
+            scrollTopBtn.classList.add('white');
+          } else {
+            scrollTopBtn.classList.remove('white');
+            scrollTopBtn.classList.add('pink');
+          }
+        } else {
+          scrollTopBtn.style.display = 'none';
+        }
+      }
+      window.addEventListener('scroll', updateScrollBtn);
+      window.addEventListener('resize', updateScrollBtn);
+      scrollTopBtn.addEventListener('click', () => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+    </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Testing & Treatment - HIV Awareness</title>
@@ -433,7 +511,7 @@
   </style>
   <script>
     // Show/hide and style scroll-to-top button
-    const scrollTopBtn = document.getElementById('scrollTopBtn');
+  // ...existing code...
     function updateScrollBtn() {
       if (window.scrollY > 200) {
         scrollTopBtn.style.display = 'flex';
@@ -659,5 +737,43 @@
       });
     });
   </script>
+  <script>
+  let scrollTimeout;
+  const delay = 50; // 0.5 seconds
+  const pageOrder = [
+    'Index.html',
+    'about.html',
+    'prevention.html',
+    'symptoms.html',
+    'testing.html',
+    'faqs.html',
+    'contact.html'
+     // replace with your 8th page filename
+  ];
+  
+  const currentPage = window.location.pathname.split('/').pop();
+
+  window.addEventListener('scroll', () => {
+    clearTimeout(scrollTimeout);
+    scrollTimeout = setTimeout(() => {
+      // Scroll to next page
+      if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight - 10) {
+        const nextIndex = pageOrder.indexOf(currentPage) + 1;
+        if (nextIndex < pageOrder.length) {
+          window.location.href = pageOrder[nextIndex];
+        }
+      }
+
+      // Scroll to previous page
+      if (window.scrollY <= 10) {
+        const prevIndex = pageOrder.indexOf(currentPage) - 1;
+        if (prevIndex >= 0) {
+          window.location.href = pageOrder[prevIndex];
+        }
+      }
+    }, delay);
+  });
+</script>
+
 </body>
 </html>
