Update flip-card styles for improved visual consistency

--- a/Index.html
+++ b/Index.html
@@ -1962,7 +1962,7 @@
                 </div>
                 <div class="flip-card">
   <div class="flip-card-inner">
-    <div class="flip-card-front" style="background: linear-gradient(to bottom right, var(--medical-green), #0e0ae7); color: rgb(18, 114, 223);">
+    <div class="flip-card-front" style="background: linear-gradient(to bottom right, var(--primary-blue), var(--primary-blue));">
       <div class="card-icon">🛡️</div>
       <h3>Condom Use</h3>
       <p>Consistent and correct condom usage</p>
@@ -1978,7 +1978,7 @@
 
                 <div class="flip-card">
                     <div class="flip-card-inner">
-                        <div class="flip-card-front" style="background:linear-gradient(to bottom right, var(--hiv-red), #0526e2);">
+                        <div class="flip-card-front" style="background:linear-gradient(to bottom right, var(--primary-blue), var(--primary-blue));">
                             <div class="card-icon">💉</div>
                             <h3>PEP</h3>
                             <p>Emergency HIV prevention medication</p>
